# verificacion-correo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ANTI_DETECCION_OWA.md  ANTI_DETECCION_USO.md  CLAUDE.md  README.md  README_GUI.md  app.py  browser_automation.py  build_test.py  config.py  config.yaml.example  contact_extractor.py  contactos_outlook.csv  copiar_sesion.py  debug_scraper.py  excel_reader.py  excel_writer.py  gui.py  gui_config_manager.py  gui_runner.py  gui_session_manager.py  iniciar_gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  scraper_gui.py  scraper_tab_methods.txt  setup_nodriver_session.py  setup_windows.bat  start-mac.sh  start.bat  test_gui.py  test_nodriver_name.py  windows_compat.py
.github/workflows/: build-windows.yml  ci.yml
.superpowers/sdd/: progress.md
config/: default.yaml
data/: correos_template.xlsx  run_history.json  scraping_metadata.json
data/gal/: cache.json  directorio_completo.json  enrich_progress.json  gal_companies.json  gal_progress.json
docs/superpowers/plans/: 2026-07-11-validations-and-tests.md  2026-07-19-auto-updater-plan.md  2026-07-19-gal-directo-a-excel-plan.md  2026-07-19-gal-enrichment-plan.md
docs/superpowers/specs/: 2026-07-19-auth-detection-design.md  2026-07-19-gal-enrichment-design.md
examples_old/: app_auto.py  app_debug.py
hooks/: hook-verificacion_correo.py
scripts/: release.sh
src/verificacion_correo/: __init__.py  __main__.py
src/verificacion_correo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/verificacion_correo/cli/: __init__.py  main.py
src/verificacion_correo/core/: __init__.py  api_extractor.py  app_paths.py  browser.py  browser_nodriver.py  config.py  excel.py  extractor.py  first_run.py  gal_enricher.py  gal_exporter.py  gal_scraper.py  platform.py  session.py  update_models.py  updater.py
src/verificacion_correo/core/antidetection/: __init__.py  delays.py  mouse_emulator.py  nodriver_manager.py  typing_simulator.py  user_agents.py
src/verificacion_correo/gui/: __init__.py  main.py  service.py  update_window.py  wizard.py
src/verificacion_correo/utils/: __init__.py  logging.py
tests/: __init__.py
tests/test_cli/: test_main.py
tests/test_core/: test_api_extractor.py  test_app_paths.py  test_config.py  test_excel.py  test_extractor.py  test_first_run.py  test_gal_enricher.py  test_gal_exporter.py  test_gal_scraper.py  test_init.py  test_platform.py  test_session.py  test_update_models.py  test_updater.py  test_utils_logging.py
tests/test_gui/: test_service.py  test_update_window.py
tests/test_integration/: __init__.py  test_flows.py
